Updated Nav Bar Added Pics
Photos added to directory, nav bar populated

--- a/About-Me.html
+++ b/About-Me.html
@@ -7,9 +7,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Travel Pro</title>
 </head>
 <body>
-    
+  
+ <!--
+      BOOTSTRAP NAV
+      https://getbootstrap.com/docs/5.0/components/navbar/
+    -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">THE TRAVEL PRO</a>
+  
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+              <li class="nav-item">
+                 <a class="nav-link" href="index.html">Home</a>
+              </li>
+  
+              <li class="nav-item">
+                <a class="nav-link" href="About-Me.html">About Me</a>
+              </li>
+  
+              <li class="nav-item">
+                <a class="nav-link" href="Past-Trips.html">Past Trips</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="sign-up.html">Sign Up</a>
+              </li>
+  
+            </ul>
+          </div>
+        </div>
+      </nav>   
+      I'm a 29 year old citizen of the world. My wife and I love to travel, and love sharing tips with like minded people!       
 </body>
 </html>
