--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
-                 <a class="nav-link" href="index.html">Home</a>
+                 <a class="nav-link" href="https://adamdavisgu.github.io/TravelPros/">Home</a>
               </li>
   
               <li class="nav-item">
