--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
   
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="navbar-collapse collapse show" id="navbarSupportedContent" style>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
@@ -46,6 +46,6 @@
           </div>
         </div>
       </nav>   
- This is a test.   
+ Learn how I explore the world.  
 </body>
 </html>
