--- a/About-Me.html
+++ b/About-Me.html
@@ -7,10 +7,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Travel Pro</title>
+    <title>About Me</title>
 </head>
 <body>
   
+    <div class = "container">
  <!--
       BOOTSTRAP NAV
       https://getbootstrap.com/docs/5.0/components/navbar/
@@ -23,7 +24,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
   
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="navbar-collapse collapse show" id="navbarSupportedContent" style>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
@@ -46,6 +47,7 @@
           </div>
         </div>
       </nav>   
+      </div>
       I'm a 29 year old citizen of the world. My wife and I love to travel, and love sharing tips with like minded people!       
 </body>
 </html>
