--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   
+    <div class="container">
  <!--
       BOOTSTRAP NAV
       https://getbootstrap.com/docs/5.0/components/navbar/
@@ -19,7 +20,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">THE TRAVEL PRO</a>
   
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
   
@@ -45,7 +46,8 @@
             </ul>
           </div>
         </div>
-      </nav>   
+      </nav> 
+      </div>  
  Learn how I explore the world.  
 </body>
 </html>
