--- a/Past-Trips.html
+++ b/Past-Trips.html
@@ -7,10 +7,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Travel Pro</title>
+    <title>Past Trips</title>
 </head>
 <body>
   
+    <div class="container-fluid">
  <!--
       BOOTSTRAP NAV
       https://getbootstrap.com/docs/5.0/components/navbar/
@@ -46,6 +47,7 @@
           </div>
         </div>
       </nav>   
+      </div>
       Photos
 </body>
 </html>
