--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   
-    <div class="container">
+    
  <!--
       BOOTSTRAP NAV
       https://getbootstrap.com/docs/5.0/components/navbar/
@@ -24,7 +24,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
   
-          <div class="navbar-collapse collapse show" id="navbarSupportedContent" style>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
@@ -47,7 +47,7 @@
           </div>
         </div>
       </nav> 
-      </div>  
+      
  Learn how I explore the world.  
 </body>
 </html>
