--- a/sign-up.html
+++ b/sign-up.html
@@ -7,10 +7,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Travel Pro</title>
+    <title>Sign Up</title>
 </head>
 <body>
   
+
  <!--
       BOOTSTRAP NAV
       https://getbootstrap.com/docs/5.0/components/navbar/
@@ -23,7 +24,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
   
-          <div class="navbar-collapse collapse show" id="navbarSupportedContent" style>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
               <li class="nav-item">
@@ -46,6 +47,7 @@
           </div>
         </div>
       </nav>   
+    
       Sign Up Below
 </body>
 </html>
