--- a/index.html
+++ b/index.html
@@ -46,11 +46,14 @@
              </nav> 
              
 
-               <!-- Twitter bootstrap -->
+               <!-- Bootstrap CSS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </head>
 <body>
+ <!-- Bootstrap CSS-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<!-- Add Image-->
+<img src= "pictures/20201205_155033.jpg" class="img-fluid" alt="Beach in St Lucia">
 
- Learn how I explore the world.  
 </body>
 </html>
