--- a/About-Me.html
+++ b/About-Me.html
@@ -50,6 +50,15 @@
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </head>
 <body>
-I'm a 29 year old citizen of the world. My wife and I love to travel, and love sharing tips with like minded people!       
+<div class="container"
+    <div class="row align-items-center">
+        <div class="col">
+            I'm a 29 year old citizen of the world. My wife and I love to travel, and love sharing tips with like minded people!
+        </div>
+        <div class="col">
+        <img src="Pictures/20201204_175932.jpg" class="img-fluid" alt="Adam in St Lucia">
+        </div>
+    </div>   
+</div>       
 </body>
 </html>
