--- a/About-Me.html
+++ b/About-Me.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 <div class="container"
-    <div class="row align-items-center">
+    <div class="row align-items-start">
         <div class="col">
             I'm a 29 year old citizen of the world. My wife and I love to travel, and love sharing tips with like minded people!
         </div>
