--- a/Past-Trips.html
+++ b/Past-Trips.html
@@ -49,6 +49,48 @@
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </head>
 <body>
-            Photos
+    <!-- Bootstrap CSS-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    <!-- Add Carousel, sample code from https://getbootstrap.com/docs/5.0/components/carousel/ -->
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="Pictures/20171226_153457.jpg" class="d-block w-100" alt="A colorful town in Colombia.">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Guatape, Colombia</h5>
+              <p>Explore the vibrant cultures of Colombia.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/20190414_145254.jpg" class="d-block w-100" alt="Black sand beach in Maui">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Maui, Hawaii</h5>
+              <p>Take a walk on a black sand beach.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/20201208_103122.jpg" class="d-block w-100" alt="The pitons in St. Lucia">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Soufriere, St. Lucia</h5>
+              <p>Marvel at the volcanic peaks in this Caribbean paradise.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 </body>
 </html>
