--- a/Past-Trips.html
+++ b/Past-Trips.html
@@ -62,21 +62,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Pictures/20171226_153457.jpg" class="d-block w-100" alt="A colorful town in Colombia.">
+            <img src="Pictures/20171226_153457.jpg" class="img-fluid" alt="A colorful town in Colombia.">
             <div class="carousel-caption d-none d-md-block">
               <h5>Guatape, Colombia</h5>
               <p>Explore the vibrant cultures of Colombia.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="Pictures/20190414_145254.jpg" class="d-block w-100" alt="Black sand beach in Maui">
+            <img src="Pictures/20190414_145254.jpg" class="img-fluid" alt="Black sand beach in Maui">
             <div class="carousel-caption d-none d-md-block">
               <h5>Maui, Hawaii</h5>
               <p>Take a walk on a black sand beach.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="Pictures/20201208_103122.jpg" class="d-block w-100" alt="The pitons in St. Lucia">
+            <img src="Pictures/20201208_103122.jpg" class="img-fluid" alt="The pitons in St. Lucia">
             <div class="carousel-caption d-none d-md-block">
               <h5>Soufriere, St. Lucia</h5>
               <p>Marvel at the volcanic peaks in this Caribbean paradise.</p>
