--- a/sign-up.html
+++ b/sign-up.html
@@ -52,7 +52,7 @@
 <body>
    
     <!-- Sign Up Page - Some code borrowed from in class stock selection exercise -->
-    <h2>Sign Up Below</h2> 
+    <h3 style="color:coral" >Sign Up Below</h3> 
     <div>
         <p>Name:</p>
         <input type="text" name="user-name" id="my-name" value="" placeholder="Jon Snow">
