--- a/sign-up.html
+++ b/sign-up.html
@@ -52,13 +52,18 @@
 <body>
    
     <!-- Sign Up Page - Some code borrowed from in class stock selection exercise -->
-    <h3 style="color:coral" >Sign Up Below</h3> 
+    <div class="row">
+        <div class="col align-self-center">
+    <h3 style="color:coral" >Sign Up For My Newsletter</h3> 
     <div>
         <p>Name:</p>
         <input type="text" name="user-name" id="my-name" value="" placeholder="Jon Snow">
+        </div>
+        <div class="col align-self-center">
         <p>Email Address:</p>
         <input type="text" name="user-email" id="my-email" value="" placeholder="Email">
         <button id="my-btn">Submit</button>
+        </div>
     </div>
 
     <!-- Insert function to log name and email address to console-->
