--- a/About-Me.html
+++ b/About-Me.html
@@ -57,7 +57,8 @@
                 <h3 style="color:coral">
                 Who am I?</h3>
             </div>
-            I'm a 29 year old citizen of the world. My wife and I love to travel, and love sharing tips with like minded people!
+            <p>I'm a 29 year old citizen of the world. My wife and I love to travel, and love sharing tips with like minded people!</p>
+            <p>My monthly newsletter will help you learn how to play the travel game and identify deals for destinations around the world!</p>
         </div>
         <div class="col">
         <img src="Pictures/20201204_175932.jpg" class="img-fluid" alt="Adam in St Lucia">
